bk_ida/gccida/g2/print_mem_expr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_mem_expr/src/print-rtl.c:551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_mem_expr/src/print-rtl.c:571:19: error: use of undeclared identifier 'off_670ADF'
fprintf( outfile, off_670ADF, name->int_cst.int_cst.low); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_mem_expr/src/print-rtl.c:579:10: error: use of undeclared identifier 'stru_6F109F'
fwrite( &stru_6F109F, 1uLL, 0xCuLL, outfile); 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_mem_expr/src/obj/print-rtl.o] Error 1
